--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
 		"dev": "concurrently \"npm run dev:css\" \"remix dev\"",
 		"dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css"
-	  },
+	},
 	"dependencies": {
 		"@remix-run/node": "^1.11.1",
 		"@remix-run/react": "^1.11.1",
@@ -14,7 +14,8 @@
 		"@vercel/node": "^2.6.2",
 		"prettier": "^2.8.3",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"zod": "^3.20.2"
 	},
 	"devDependencies": {
 		"@remix-run/dev": "^1.11.1",
